# ariel

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260301_0001_initial_schema.py  20260302_0002_action_attempts_and_approvals.py  20260302_0003_action_attempt_contract_hash.py  20260303_0004_retrieval_artifacts.py  20260303_0005_weather_default_location.py  20260303_0006_google_connector_foundation.py  20260306_0007_memory_and_session_rotation.py  20260313_0008_capture_ingress.py  20260313_0009_capture_shared_content_kind.py  (+48 more)
docs/: agent-loop-cutover.md  agent-tooling.md  ai-first-completion-cutover.md  ai-first-judgment-cutover.md  ai-first-sota-gap-cutover.md  ai-first-verification-gap-cutover.md  ai-first.md  boundaries.md  codebase.md  conventions.md  coordination.md  email-decluttering-sota-cutover.md  errors.md  function-parameters.md  index.md  memory-cognition-research-appendix.md  memory-cognition-research.md  memory-substrate-cutover.md  mutation-ordering.md  north-star-cutover.md  operation-types.md  proactive-ai-deliberation-cutover.md  proactive-assistant-cutover.md  proactive-attention-ranking-cutover.md  production-runbook.md  run-program-cutover.md  schema-consolidation-cutover.md  schema-cross-cutting-cutover.md  simplicity.md  single-run-tool-cutover.md  typing.md
scripts/: agency_setup.sh  agency_verify.sh  bootstrap.sh  dev_db.py  gcp_create_runtime_sa.sh  gcp_provision_pubsub.sh  verify_private_tailnet_posture.py
tests/: conftest.py  fake_pubsub.py  fake_sandbox.py
(+222 files in other folders)
