[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariel"
version = "0.1.0"
description = "slice-0 private walking skeleton for ariel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "cryptography>=46.0.5",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "pydantic-settings>=2.8.1",
  "psycopg[binary]>=3.2.6",
  "sqlalchemy>=2.0.39",
  "ulid-py>=1.1.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "testcontainers>=4.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*", "testcontainers.*", "ulid"]
ignore_missing_imports = true
